--- a/resources/sass/custom.scss
+++ b/resources/sass/custom.scss
@@ -211,24 +211,24 @@ a {
 
 .column-action,
 .table-action {
-    width: 100px;
+    width: 100px !important;
 }
 
 .column-active {
-    width: 80px;
+    width: 80px !important;
 }
 
 .column-status {
-    width: 50px;
+    width: 50px !important;
     text-align: center;
 }
 
 .column-sort {
-    width: 50px;
+    width: 50px !important;
 }
 
 .column-checkbox {
-    width: 30px;
+    width: 30px !important;
 }
 
 .button {
@@ -479,45 +479,6 @@ body {
     }
 }
 
-.input-group {
-
-    .form-control {
-        height: 35px !important;
-    }
-
-    .input-group-prepend {
-        height: 35px;
-
-        .input-group-text {
-            border-top-left-radius: 7px;
-            border-bottom-left-radius: 7px;
-        }
-
-        .btn{
-            border: 1px solid #ced4da;
-        }
-    }
-
-    .input-group-append {
-        height: 35px;
-
-        .input-group-text {
-            border-top-right-radius: 7px;
-            border-bottom-right-radius: 7px;
-        }
-
-        .btn{
-            border: 1px solid #ced4da;
-        }
-    }
-
-    .input-group-text {
-        border: 1px solid #ced4da !important;
-        background-color: whitesmoke;
-        font-size: 1em;
-    }
-}
-
 .card{
     .card-header{
         background-color: whitesmoke;
@@ -594,10 +555,9 @@ body {
         }
     }
 }
-/* purgecss end ignore */
 
 
-/* RESPONSIVE EXAMPLE */
+/* RESPONSIVE EXAMPLE 1*/
 
 .stacktable.large-only {
     min-width: 100%;
@@ -625,4 +585,51 @@ body {
 
 .container-pagination{
     margin-top: 1%;
+}
+
+.input-group-append .input-group-text {
+    border-top-left-radius: 7px;
+    border-bottom-left-radius: 7px;
+    display: flex;
+    align-items: center;
+    padding: 0.375rem 0.75rem;
+    margin-bottom: 0;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #495057;
+    text-align: center;
+    white-space: nowrap;
+    background-color: #e9ecef;
+    border: 1px solid #ced4da;
+    border-radius: 0.25rem;
+    height: 35px;
+}
+
+.input-group-prepend .input-group-text {
+    border-radius: 0.5rem;
+    border-top-right-radius: 0;
+    border-bottom-right-radius: 0;
+    height: 36px;
+    align-items: center;
+    padding: 0.375rem 0.75rem;
+    margin-bottom: 0;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #212529;
+    text-align: center;
+    background-color: #f5f5f5;
+    white-space: nowrap;
+    border: 1px solid #ced4da;
+}
+
+.input-group-prepend .btn{
+    border: 1px solid #ced4da;
+    border-top-right-radius: 0px;
+    border-bottom-right-radius: 0px;
+}
+
+.input-group-append .btn{
+    border: 1px solid #ced4da;
 }
