--- a/resources/sass/custom.scss
+++ b/resources/sass/custom.scss
@@ -633,3 +633,9 @@ body {
 .input-group-append .btn{
     border: 1px solid #ced4da;
 }
+
+.container-break .hr{
+    padding-top: 10px;
+    border-bottom: 0.5px solid #e1e1e1;
+    margin-bottom: 20px;
+}
