--- a/resources/sass/responsive.scss
+++ b/resources/sass/responsive.scss
@@ -568,3 +568,27 @@
 	}
 }
 
+@media screen and ( max-width: 500px ){
+
+	.pagination {
+		justify-content: center;
+	}
+
+	li.page-item {
+
+		display: none;
+	}
+
+	.page-item:first-child,
+	.page-item:nth-child( 2 ),
+	.page-item:nth-child( 3 ),
+	.page-item:nth-child( 4 ),
+	.page-item:nth-last-child( 2 ),
+	.page-item:nth-last-child( 3 ),
+	.page-item:nth-last-child( 4 ),
+	.page-item:last-child,
+	.page-item.active,
+	.page-item.disabled {
+			display: block;
+		}
+}
