--- a/resources/sass/custom.scss
+++ b/resources/sass/custom.scss
@@ -639,3 +639,41 @@ body {
     border-bottom: 0.5px solid #e1e1e1;
     margin-bottom: 20px;
 }
+
+.wrap-circles {
+    position: absolute;
+    right: 50px;
+    top: -30px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    padding: 2rem 1rem;
+}
+
+.circle {
+    position: relative;
+    width: 47px;
+    height: 47px;
+    margin: 0.5rem;
+    border-radius: 50%;
+    background: #33B5E5;
+    overflow: hidden;
+
+    .inner {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        background-color: #fff;
+        width: 35px;
+        height: 35px;
+        border-radius: 50%;
+        font-size: 0.65rem;
+        font-weight: bold;
+        color: #505050;
+    }
+}
